# spice-vdagent

./: CHANGELOG.md  Makefile.am  Makefile.in  README.md  aclocal.m4  configure  configure.ac
data/: spice-vdagent.1.in  spice-vdagentd  spice-vdagentd.1.in  spice-vdagentd.service
debian/: changelog  control  copyright  rules  salsa-ci.yml  spice-vdagent.install  spice-vdagent.links  watch
debian/patches/: 0001-configure.ac-autoconf-2.71-compatibility.patch  CVE-2020-25650-1.patch  CVE-2020-25650-2.patch  CVE-2020-25651-1.patch  CVE-2020-25651-2.patch  CVE-2020-25652-1.patch  CVE-2020-25652-2.patch  CVE-2020-25653-1.patch  CVE-2020-25653-2.patch  CVE-2020-2565x-1.patch  disable_test_session_info.patch  series  systemd-login-Avoid-a-crash-on-container.patch  systemd_service_default_file.patch  vdagentd-work-around-GLib-s-fork-issues.patch
debian/source/: options
debian/tests/: control
debian/upstream/: signing-key.asc
src/: config.h.in  udscs.c  udscs.h  vdagent-connection.c  vdagent-connection.h  vdagentd-proto-strings.h  vdagentd-proto.h
src/vdagent/: audio.c  audio.h  clipboard.c  clipboard.h  device-info.c  device-info.h  display.c  display.h  file-xfers.c  file-xfers.h  mutter.c  mutter.h  vdagent.c  webdav-cb.c  webdav-cb.h  x11-priv.h  x11-randr.c  x11.c  x11.h
src/vdagentd/: console-kit.c  dummy-session-info.c  session-info.h  systemd-login.c  uinput.c  vdagentd.c  virtio-port.c  virtio-port.h  xorg-conf.c
tests/: test-device-info.c  test-file-xfers.c  test-session-info.c  test-termination.c
